syntax = "proto2";

package supervisor.v1;

// Supervisor 服务定义
// actrix-node 与 actrix-supervisor 之间的通信协议
service Supervisor {
  // 双向流式状态上报和确认
  // Node 持续上报状态，Supervisor 返回确认
  rpc StreamStatus(stream StatusReport) returns (stream StatusAck);

  // 配置更新（Supervisor 主动推送到 Node）
  rpc UpdateConfig(ConfigUpdateRequest) returns (ConfigUpdateResponse);

  // 租户管理操作
  rpc ManageTenant(TenantOperation) returns (TenantOperationResponse);

  // 健康检查和心跳
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// ============================================================================
// 认证凭证（nonce-auth 兼容）
// ============================================================================

// NonceCredential 用于所有 RPC 请求的认证
// 对应 nonce-auth 库的 NonceCredential 结构
message NonceCredential {
  // Unix timestamp (秒级精度)
  // 用于时间窗口验证，防止过期请求
  required uint64 timestamp = 1;

  // UUID v4 格式的随机 nonce
  // 确保每个请求唯一，防止重放攻击
  required string nonce = 2;

  // Base64 编码的 HMAC-SHA256 签名
  // 签名内容: HMAC-SHA256(secret, timestamp + nonce + payload)
  required string signature = 3;
}

// ============================================================================
// 健康检查和心跳
// ============================================================================

message HealthCheckRequest {
  required string node_id = 1;         // 业务必须：标识节点
  required NonceCredential credential = 2;  // 业务必须：认证凭证
}

message HealthCheckResponse {
  required bool healthy = 1;             // 业务必须：健康状态
  required int64 server_timestamp = 2;   // 业务必须：时钟同步校验
  required int64 latency_ms = 3;         // 业务必须：网络延迟监控
}

// ============================================================================
// 状态上报
// ============================================================================

message StatusReport {
  required string node_id = 1;              // 业务必须：标识节点
  required int64 timestamp = 2;             // 业务必须：时序性
  optional SystemMetrics metrics = 3;       // 可选：系统指标（某些环境可能无法采集）
  repeated ServiceStatus services = 4;      // 可重复：服务状态列表
  required string location_tag = 5;         // 业务必须：地理位置标签（负载均衡需要）
  required string version = 6;              // 业务必须：版本控制和兼容性
  required uint32 power_reserve_level = 7;  // 业务必须：负载等级 0-5（调度核心依据）
  required string name = 8;                 // 业务必须：节点名称（可读性和管理）
  required NonceCredential credential = 9;  // 业务必须：认证凭证
}

message SystemMetrics {
  // CPU 使用情况
  required double cpu_usage_percent = 1;

  // 内存使用情况
  required uint64 memory_used_bytes = 2;
  required uint64 memory_total_bytes = 3;
  required double memory_usage_percent = 4;

  // 网络流量
  required uint64 network_rx_bytes = 5;
  required uint64 network_tx_bytes = 6;

  // 磁盘使用
  required uint64 disk_used_bytes = 7;
  required uint64 disk_total_bytes = 8;

  // 系统负载
  required double load_average_1m = 9;
  optional double load_average_5m = 10;    // 可选：某些系统可能不提供
  optional double load_average_15m = 11;   // 可选：某些系统可能不提供
}

message ServiceStatus {
  required string name = 1;                 // 业务必须：服务标识
  required ResourceType type = 2;           // 业务必须：服务类型（路由依据）
  required bool is_healthy = 3;             // 业务必须：健康状态（调度核心）
  required uint32 active_connections = 4;   // 业务必须：连接数（负载评估）
  required uint64 total_requests = 5;       // 业务必须：请求总数（流量监控）
  required uint64 failed_requests = 6;      // 业务必须：失败数（质量监控）
  required double average_latency_ms = 7;   // 业务必须：延迟（性能监控）
  optional string url = 8;                  // 可选：服务 URL（外部访问使用）
  optional uint32 port = 9;                 // 可选：服务端口（内部服务可能不需要）
  optional string domain = 10;              // 可选：服务域名（内部 IP 访问时不需要）
}

message StatusAck {
  required string node_id = 1;      // 业务必须：确认目标节点
  required bool received = 2;       // 业务必须：接收状态
  required int64 timestamp = 3;     // 业务必须：确认时间戳
}

// ============================================================================
// 配置更新
// ============================================================================

message ConfigUpdateRequest {
  required string node_id = 1;          // 业务必须：目标节点
  required ConfigType config_type = 2;  // 业务必须：配置类型
  required string config_key = 3;       // 业务必须：配置键
  required string config_value = 4;     // 业务必须：配置值
  required bool apply_immediately = 5;  // 业务必须：是否立即应用
}

message ConfigUpdateResponse {
  required bool success = 1;        // 业务必须：操作结果
  optional string error_message = 2; // 可选：失败时才有错误信息
  optional string old_value = 3;    // 可选：旧值（用于回滚，非必须）
}

enum ConfigType {
  CONFIG_TYPE_UNSPECIFIED = 0;
  TURN_REALM = 1;
  STUN_BIND_ADDRESS = 2;
  LOG_LEVEL = 3;
  SERVICE_ENABLED = 4;
  CUSTOM = 99;
}

// ============================================================================
// 租户管理
// ============================================================================

message TenantOperation {
  required OperationType operation = 1;  // 业务必须：操作类型
  required string tenant_id = 2;         // 业务必须：租户标识
  optional TenantCreateInfo create_info = 3;  // 可选：CREATE 时需要
  optional TenantUpdateInfo update_info = 4;  // 可选：UPDATE 时需要
  required NonceCredential credential = 5;    // 业务必须：认证凭证
}

enum OperationType {
  OPERATION_TYPE_UNSPECIFIED = 0;
  CREATE = 1;
  UPDATE = 2;
  DELETE = 3;
  GET = 4;
  LIST = 5;
}

message TenantCreateInfo {
  required string tenant_id = 1;            // 业务必须：租户标识
  required string name = 2;                 // 业务必须：租户名称
  required bytes public_key = 3;            // 业务必须：公钥（身份验证）
  optional bytes secret_key = 4;            // 可选：某些场景下只需要公钥
  required bool enabled = 5;                // 业务必须：启用状态
  required string key_id = 6;               // 业务必须：密钥 ID（密钥轮换需要）
  repeated ResourceType use_servers = 7;    // 可重复：允许使用的服务列表
}

message TenantUpdateInfo {
  required string tenant_id = 1;  // 业务必须：租户标识
  optional string name = 2;       // 可选：名称可能不变
  optional bool enabled = 3;      // 可选：状态可能不变
}

message TenantInfo {
  required string tenant_id = 1;            // 业务必须：租户标识
  required string name = 2;                 // 业务必须：租户名称
  required bool enabled = 3;                // 业务必须：启用状态
  required int64 created_at = 4;            // 业务必须：创建时间
  optional int64 updated_at = 5;            // 可选：未更新时可为空
  required bytes public_key = 6;            // 业务必须：公钥
  required string key_id = 7;               // 业务必须：密钥 ID
  repeated ResourceType use_servers = 8;    // 可重复：允许使用的服务列表
}

message TenantList {
  repeated TenantInfo tenants = 1;   // 可重复：租户列表
  required uint32 total_count = 2;   // 业务必须：总数（分页需要）
}

message TenantOperationResponse {
  required bool success = 1;          // 业务必须：操作结果
  optional string error_message = 2;  // 可选：失败时才有错误信息
  optional TenantInfo info = 3;       // 可选：GET/CREATE 时返回
  optional TenantList list = 4;       // 可选：LIST 时返回
}

// ============================================================================
// 资源类型枚举
// ============================================================================

enum ResourceType {
  RESOURCE_TYPE_UNSPECIFIED = 0;
  STUN = 1;
  TURN = 2;
  SIGNALING = 3;
  AIS = 4;
  KS = 5;
}
